Changelog
=========

2.2.8 (unreleased)
------------------

- Nothing changed yet.


2.2.7 (2012-08-11)
------------------

- Change breadcrumb separator to / (slash character) for accessibility, and added SEO benefits. 
  see https://dev.plone.org/ticket/12904
  [polyester]

- Add language atribute to presentation.pt for WCAG 2.0 compliance. 
  See https://dev.plone.org/ticket/12902
  [rmatt, polyester]

- Remove hard dependency on ATContentTypes.
  [davisagli]


2.2.6 (2012-04-15)
------------------

- Move .row and .cell styles from footer.pt to Sunburst main_template.
  Fixes https://dev.plone.org/ticket/12156
  [agnogueira]

- Add link targets for all action based links.  The target can be
  configured on a per-action basis.
  [rpatterson]


2.2.5 (2012-01-26)
------------------

- Slightly changed the whitespace in sitemap.xml.gz.
  [maurits]

- Use the link_target attribute (e.g. ``_target``) of user actions in
  the personal bar, if set.
  Fixes http://dev.plone.org/ticket/11609
  [maurits]

- Added a page as a not-js fallback for the user dropdown menu
  [giacomos]


2.2.4 (2011-12-03)
------------------

- Add the ability for the navtree strategy to suppliment the query.
  Fixes a problem where the listing of default pages in navigation
  trees could no longer be enabled.
  [rossp]


2.2.3 (2011-10-17)
------------------

- Make Keyword viewlet link to the new p.a.search view, as well as respect
  navigation root.
  Fixes http://dev.plone.org/plone/ticket/12231

- Added on body a class related to subsite.
  The class is named site-x where x is navigation root object id.
  [thomasdesvenain]

- Treat aliases to the ``(Default)`` view of a content type also as a
  view template (providing IViewView).
  Fixes http://dev.plone.org/plone/ticket/8198
  [maurits]

- Fix possible ZCML load order issue by explicitly loading CMF permissions.
  Fixes http://dev.plone.org/plone/ticket/11869
  [davisagli]
